--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install selenium webdriver-manager fake-useragent
+          pip install -r requirements.txt
 
       - name: Install Chrome
         run: |
