--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -13,10 +13,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: List repository contents (debugging)
+        run: |
+          ls -la  # Check if Solana_Scraper.py is in the root directory
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.11
+          python-version: 3.10
 
       - name: Install Python dependencies
         run: |
@@ -32,7 +36,7 @@ jobs:
 
       - name: Run scraper
         run: |
-          xvfb-run --auto-servernum python scrape_solana.py
+          xvfb-run --auto-servernum python Solana_Scraper.py  # Updated to match your script name
 
       - name: Commit and push CSV update
         run: |
