--- a/.github/workflows/Solona_scraper.yml
+++ b/.github/workflows/Solona_scraper.yml
@@ -1,4 +1,4 @@
-name: Scrape Solana Data
+name: Scrape and Clean Solana Data
 
 on:
   schedule:
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:        # Allows manual trigger
 
 jobs:
-  scrape:
+  scrape_and_clean:
     runs-on: ubuntu-latest
 
     steps:
@@ -36,12 +36,24 @@ jobs:
 
       - name: Run scraper
         run: |
-          xvfb-run --auto-servernum python Solana_Scraper.py  # Updated to match your script name
+          xvfb-run --auto-servernum python Solana_Scraper.py  # Run the scraper to fetch the raw data
 
-      - name: Commit and push CSV update
+      - name: Commit and push raw CSV update
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add solana_data.csv
           git commit -m "Auto-scraped Solana data [$(date +'%Y-%m-%d %H:%M:%S')]" || echo "No changes to commit"
+          git push
+
+      - name: Run data cleaning
+        run: |
+          python solana_cleaner.py  # Run the cleaning script to process the raw data
+
+      - name: Commit and push cleaned CSV update
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add Solana_cleaned.csv
+          git commit -m "Cleaned Solana data [$(date +'%Y-%m-%d %H:%M:%S')]" || echo "No changes to commit"
           git push
